[package]
name = "bookery"
version = "0.1.0"
description = "Client library to query a tantivy index customized for books."
edition = "2021"
repository = "https://github.com/chunjiw/bookery"
homepage = "https://github.com/chunjiw/bookery"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
